--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="#" class="btn">Read more</a>
         </div>
         <div class="about-img">
-            <img src="pic3.jpg" alt="">
+            <img src="pic3 - Copy.jpg" alt="">
         </div>
     </section>
 
